--- a/phpLogin/login_style.css
+++ b/phpLogin/login_style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, "segoe ui", roboto, oxygen, ubuntu, cantarell, "fira sans", "droid sans", "helvetica neue", Arial, sans-serif;
     font-size: 16px;
@@ -7,7 +7,7 @@
 }
 body {
     background-color: #435165;
-}
+} */
 .login {
     width: 400px;
     background-color: #ffffff;
